Bug 140361 - Calc: Edit Hyperlink in context menu doesn't work if link isn't selected (GTK3)
Summary: Calc: Edit Hyperlink in context menu doesn't work if link isn't selected (GTK3)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.4.0.3 release
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.3.0 target:7.2.0.0.beta2
Keywords:
Depends on:
Blocks: GTK3 Hyperlink-Calc
  Show dependency treegraph
 
Reported: 2021-02-12 05:45 UTC by Aron Budea
Modified: 2021-06-22 15:23 UTC (History)
0 users

See Also:
Crash report or crash signature:
Regression By:


Attachments
Sample ODS with a hyperlink (7.60 KB, application/vnd.oasis.opendocument.spreadsheet)
2021-02-12 05:45 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2021-02-12 05:45:04 UTC
Created attachment 169696 [details]
Sample ODS with a hyperlink

This seems similar to bug 137445, but in Calc.

Open the attached sample, right-click the hyperlink, and choose Edit Hyperlink.

-> Nothing happens.

It seems this only happens if you right-click over the right half of the link, which puts the caret at the end of the hyperlink. If you right-click over the left half, the caret goes to the beginning of the hyperlink, and the dialog opens fine.

Occurs with gtk3 VCL plugin, the dialog pops up with gen VCL plugin, and is populated with the link.
The menu option was changed/added in 6.4, in 6.3 there is a Hyperlink item in the context menu, which opens the dialog, but it isn't populated, and isn't for changing the existing link.

Observed in LO 7.2.0.0.alpha0+ (066799b4a162aa0a4bc6aa28339f1f943a13971e), 6.4.0.3 / Ubuntu.
Comment 1 Caolán McNamara 2021-06-22 10:50:01 UTC
I can try the same solution there for here
Comment 2 Commit Notification 2021-06-22 13:29:27 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d9a5302ca8bef90914539c12adb6c81496c28504

Resolves: tdf#140361 use the DisableEditHyperlink state as of menu launch time

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2021-06-22 13:29:40 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/66e234549a15cad1b5b61661fb28c7f827ed6e8b

Resolves: tdf#140361 use the DisableEditHyperlink state as of menu launch time

It will be available in 7.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.