sd/source/ui/view/drviews4.cxx
@@ -832,7 +832,7 @@ void DrawViewShell::Command(const CommandEvent& rCEvt, ::sd::Window* pWin)
             {
                 SfxBindings& rBindings = GetViewFrame()->GetBindings();
                 // tdf#137445 set what the menu popup state for this was
-                moAtContextMenu_DisableEditHyperlink = bShouldDisableEditHyperlink;
+                EnableEditHyperlink();
                 // ensure moAtContextMenu_DisableEditHyperlink will be cleared
                 // in the case that EditHyperlink is not dispatched by the menu
                 rBindings.Invalidate(SID_EDIT_HYPERLINK);
@@ -843,6 +843,11 @@ void DrawViewShell::Command(const CommandEvent& rCEvt, ::sd::Window* pWin)
     {
         ViewShell::Command(rCEvt, pWin);
     }
+}
+
+void DrawViewShell::EnableEditHyperlink()
+{
+    moAtContextMenu_DisableEditHyperlink = false;
 }
 
 void DrawViewShell::ShowMousePosInfo(const ::tools::Rectangle& rRect,
